[package]
name = "hubcaps"
version = "0.5.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust interface for Github"
documentation = "https://docs.rs/hubcaps/"
homepage = "https://github.com/softprops/hubcaps"
repository = "https://github.com/softprops/hubcaps"
keywords = ["hyper", "github"]
license = "MIT"
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[badges]
travis-ci = { repository = "softprops/hubcaps" }
coveralls = { repository = "softprops/hubcaps" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
pretty_env_logger = "0.3"
tokio = "0.1"

[dependencies]
dirs = { version = "1.0", optional = true }
futures = "0.1"
http = "0.1"
hyper = "0.12"
hyperx = "0.13"
jsonwebtoken = "5"
mime = "0.3"
log = "0.4"
url = "1.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
error-chain = "0.12"
base64 = "0.10"
percent-encoding = "1"

[dependencies.hyper-tls]
optional = true
version = "0.3"

[features]
default = ["tls"]
# enable tls
tls = ["hyper-tls"]
# enable etag-based http_cache functionality
httpcache = ["dirs"]
