[package]
name = "hubcaps"
version = "0.5.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust interface for Github"
documentation = "https://docs.rs/hubcaps/"
homepage = "https://github.com/softprops/hubcaps"
repository = "https://github.com/softprops/hubcaps"
keywords = ["hyper", "github"]
license = "MIT"
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "softprops/hubcaps" }
coveralls = { repository = "softprops/hubcaps" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
pretty_env_logger = "0.3"
tokio = "0.1"

[dependencies]
dirs = { version = "1.0", optional = true }
futures = "0.1"
http = "0.1"
hyperx = "0.13"
jsonwebtoken = "6"
mime = "0.3"
log = "0.4"
url = "1.7"
reqwest = { version = "0.9.10", default-features = false }
serde = { version = "1.0.84", features = ['derive'] }
serde_derive = "1.0"
serde_json = "1.0"
error-chain = "0.12"
base64 = "0.10"
percent-encoding = "1"

[features]
default = ["default-tls"]
# enable native tls
default-tls = ["reqwest/default-tls"]
# enable rustls
rustls-tls = ["reqwest/rustls-tls"]
# enable etag-based http_cache functionality
httpcache = ["dirs"]
