[package]
name = "hubcaps"
version = "0.6.2"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust interface for Github"
documentation = "https://docs.rs/hubcaps/"
homepage = "https://github.com/softprops/hubcaps"
repository = "https://github.com/softprops/hubcaps"
keywords = ["hyper", "github"]
license = "MIT"
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
pretty_env_logger = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies]
base64 = "0.21"
data-encoding = "2"
dirs = { version = "3.0", optional = true }
futures = { version = "0.3", default-features = false }
http = "0.2"
hyperx = "1"
jsonwebtoken = { version = "8", optional = true }
log = "0.4"
mime = "0.3"
percent-encoding = "2"
reqwest = { version = "0.11", default-features = false }
serde = { version = "1.0", features = ['derive'] }
serde_derive = "1.0"
serde_json = "1.0"
url = "2"

[features]
default = ["app", "default-tls"]
# enable native tls
default-tls = ["reqwest/default-tls"]
app = ["jwt"]
jwt = ["jsonwebtoken"]
# enable rustls
rustls-tls = ["reqwest/rustls-tls"]
# enable etag-based http_cache functionality
httpcache = ["dirs"]
